# mtxshift

./: Cargo.toml  README.md  build.rs  build.sh
src/: main.rs
src/apps/: counter.rs  mod.rs  shift.rs  timer.rs
src/apps/timer/: linear.rs  sand.rs  sprinkle.rs
src/hardware/: mac_dummy.rs  mod.rs  rpi.rs
