[package]
name = "mtxshift"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-compat = "0.2.5"
chrono = "0.4.42"
futures = "0.3.32"
gpio-cdev = { version = "0.6.0", features = ["async-tokio"] }
rand = "0.10.0"
rouille = "3.6.2"
smol = "2.0.2"
workjam-rs = { version = "0.1.0", path = "../workjam-rs" }

# to get rust-analyzer to shut the FUCK up
[target.'cfg(target_os = "linux")'.dependencies]
embedded-hal = "1.0.0"
linux-embedded-hal = { version = "0.4.1", features = ["gpio_cdev"] }
max7219 = "0.5.0"

[profile.release]
opt-level = 3         # Optimize for maximum execution speed
lto = "fat"           # Enable the most aggressive Link Time Optimization
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but improving performance
